# SmarTrim-Artifact

./: .gitignore  Figure3.md  INSTALL.md  LICENSE  README.md  REQUIREMENTS.md  STATUS.md  Table1-Partial.md  Table1.md  USAGE.md  config.json  pyproject.toml
SmarTrim/: .gitignore  .ocamlformat  .ocamlformat-ignore  Dockerfile  README.md  TODO.txt  dune-project  dune-workspace  verismart.opam
SmarTrim/examples/: abstract_contract.sol  call-modifier.sol  cfg-test.sol  cnstr.sol  cnstr2.sol  compilable.sol  delegate.sol  enum.sol  erc20.sol  extern_loop.sol  function_abstraction_with_tx_invariant.sol  honeypot.sol  ilf.sol  inheritance.sol  inheritance2.sol  inheritance3.sol  inheritance_complex.sol  inline-test.sol  jemckse.sol  leak_safe.sol  leak_unsafe2.sol  loop_invariant.sol  many-path.sol  pow_fp.sol  query_in_cnstr_call.sol  recur1.sol  recur2.sol  recur3.sol  recursive_cnstr1.sol  recursive_cnstr2.sol  recursive_cnstr3.sol  recursive_cnstr4.sol  send_eth.sol  simple-token.sol  simple-token2.sol  simple_dao_safe.sol  simple_dao_safe2.sol  smartest_leaking_fp.sol  smtchecker.sol  struct.sol  (+7 more)
SmarTrim/examples-public/: leak_safe.sol  leak_unsafe.sol
SmarTrim/repair_compile_errors/: 0x0.sol  add_in_the_middle_of_require.sol  add_ownership_checking_in_the_middle_of_require.sol  call_value_keyword.sol  change_cnstr_only_in_main_contract.sol  days.sol  do_not_move_return_assignment.sol  finney.sol  modifier_arg_assignment_is_not_function_body.sol  no_nonReentrant_to_view.sol  private_var_from_parent.sol  replace_calltemp.sol  return_multiple_lines.sol  sint.sol  (+2 more)
(+1286 files in other folders)
